@@ -46,6 +46,9 @@ debhelper (9.20160403+unreleased) UNRELEASED; urgency=medium
     the package.
   * dh_strip: Cache file(1) output to avoid calling file(1)
     twice on all ELF binaries in the package.
+  * Dh_Lib.pm: Add better error messages when a debhelper program
+    fails due to an executable config file not terminating with
+    success.  (Closes: #818933)
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Apr 2016 09:20:32 +0000
 
